--- a/src/components/Character.module.css
+++ b/src/components/Character.module.css
@@ -3,8 +3,9 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  background-color: #1e2029;
+  background-color: #051020;
   border-radius: 8px;
+  transition: background-color 0.3s, transform 0.3s;
 }
 
 .character img {
@@ -18,6 +19,33 @@
   color: #f0f0f0;
   font-size: 24px;
   margin: 10px 0;
+  max-width: 220px;
+  max-height: 3.6em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1; /* número de linhas */
+  -webkit-box-orient: vertical;
+  white-space: normal;
+  margin: 0 0 10px 0;
+}
+
+.character p {
+  max-width: 220px;
+  max-height: 3.6em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* número de linhas */
+  -webkit-box-orient: vertical;
+  white-space: normal;
+  margin: 0 0 10px 0;
+}
+
+.character:hover {
+  background-color: #000;
+  cursor: pointer;
+  transform: scale(0.95);
 }
 
 .stats {
