--- a/src/components/Pag.module.css
+++ b/src/components/Pag.module.css
@@ -4,3 +4,19 @@
   align-items: center;
   margin: 20px;
 }
+
+.pagination button {
+  background-color: #051020;
+  border: 1px solid #051020;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 0 5px;
+  cursor: pointer;
+  transition: border-color 0.2s;
+}
+
+.pagination button:hover {
+  transform: scale(1.05);
+  border-color: #f0f0f0;
+  background-color: black;
+}
