--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ a:hover {
 body {
   margin: 0;
   min-height: 100vh;
-  background: url('/background_vermelho.avif') no-repeat center center fixed;
+  background: url('/galaxy_background.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
