--- a/src/components/LoginForm.module.css
+++ b/src/components/LoginForm.module.css
@@ -3,9 +3,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 30vh;
-    width: 30vh;
     background-color: #1e2029;
+    height: 250px;
+    width: 300px;
+    border-radius: 1rem;
+    padding: 1rem;
 }
 
 .formGroup{
@@ -25,7 +27,15 @@
     flex: 1;
     padding: 0.5rem;
     border: 1px solid #ccc;
-    border-radius: 0.25rem;
+    border-radius: 0.5rem;
     background-color: #f0f0f0;
     color: black;
+}
+
+.link button{
+    padding: 1rem;
+    background-color: #d31d05;
+    border-color: #d31d05;
+    border-radius: 0.5rem;
+    font-size: 100%;
 }
