feat: Adicionando efeitos no hover do botão de Entrar

--- a/src/components/Login/LoginForm.module.css
+++ b/src/components/Login/LoginForm.module.css
@@ -39,3 +39,9 @@
     border-radius: 0.5rem;
     font-size: 100%;
 }
+
+.link button:hover{
+    background-color: #b00c00;
+    border-color: #b00c00;
+    cursor: pointer;
+}
