--- a/src/components/Home/Character.module.css
+++ b/src/components/Home/Character.module.css
@@ -6,6 +6,7 @@
   background-color: #051020;
   border-radius: 8px;
   transition: background-color 0.3s, transform 0.3s;
+  position: relative;
 }
 
 .character img {
@@ -53,4 +54,20 @@
   flex-direction: row;
   align-items: center;
   color: #b0b0b0;
+}
+
+.favorite {
+  margin-right: 10px;
+  cursor: pointer;
+  background: #fff;
+  border-radius: 10%;
+  padding: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.25);
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
